feat(catalog): add SKU attributes